--- a/public/login.html
+++ b/public/login.html
@@ -20,22 +20,17 @@
     <!-- -------HEADER inicio------- -->
     <div class="header">
         <div class="container">
-            <h1 class="titulo">O Rappa</h1>
-            <ul class="navbar">
-                <li>
-                    <a href="texte.html">Inicial</a>
-                </li>
-                <li>
-                    <a href="simulador.html">Simulador</a>
-                </li>
-                <li>|</li>
-                <li class="agora">
-                    <a href="#">Login</a>
-                </li>
-                <li>
-                    <a href="cadastro.html">Cadastro</a>
-                </li>
-            </ul>
+            <div class="header">
+                <nav class="navbar">
+                    <img class="logoBandaNav" src="../public/assets/imgs/ORaioRappa.png" style="width: 95px;">
+                    <a href="./index.html">INICIAL</a>
+                    <a href="./simulador.html">SOBRE</a>
+                    <a href="./simulador.html">DISCOGRAFIA</a>
+                    <a href="./simulador.html">QUIZ</a>
+                    <a href="./login.html">LOGIN</a>
+                    <a href="./cadastro.html">CADASTRO</a>
+                </nav>
+            </div>
         </div>
     </div>
     <!-- -------HEADER fim------- -->
