--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -19,24 +19,23 @@
   <!-- -------HEADER inicio------- -->
   <div class="header">
     <div class="container">
-      <h1 class="titulo">O Rappa</h1>
-      <ul class="navbar">
-        <li>
-          <a href="./texte.html">Inicial</a>
-        </li>
-        <li>
-          <a href="./simulador.html">Simulador</a>
-        </li>
-        <li>|</li>
-        <li>
-          <a href="./login.html">Login</a>
-        </li>
-        <li class="agora">
-          <a href="#">Cadastro</a>
-        </li>
-      </ul>
+        <div class="header">
+            <nav class="navbar">
+                <img class="logoBandaNav" src="../public/assets/imgs/ORaioRappa.png" style="width: 95px;">
+                <a href="./index.html">INICIAL</a>
+                <a href="./simulador.html">SOBRE</a>
+                <a href="./simulador.html">DISCOGRAFIA</a>
+                <a href="./simulador.html">QUIZ</a>
+                <a href="./login.html">LOGIN</a>
+                <a href="./cadastro.html">CADASTRO</a>
+            </nav>
+        </div>
     </div>
-  </div>
+</div>
+
+<div class="espacamento">
+
+</div>
   <!-- -------HEADER fim------- -->
 
   <div class="login">
@@ -77,7 +76,7 @@
       </div>
       <div class="form">
         <input type="text" id="confirmacao_senha_input" class="form__input" autocomplete="off" placeholder=" ">
-        <span class="form__span">Confirmação de Senha</span>
+        <span id="confirmarSenha" class="form__span">Confirmação de Senha</span>
       </div>
       <p id="btn"><button onclick="cadastrar()" class="button">Cadastrar</button></p>
       <div id="div_aguardar" class="loading-div">
