--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,7 @@
         </nav>
     </div>
 
-    <div class="espacamento">
-
-    </div>
+    <div class="espacamento"></div>
 
     <div class="divFotoBanda">
         <img class="logoBanda" src="../public/assets/imgs/ORaioRappa.png" alt="">
@@ -145,7 +143,7 @@
 
     <footer class="rodape">
         <div class="column1">
-            <h2><img src="../public/assets/imgs/theicon copiar.png" alt="LogoRHS">O Rappa</h2>
+            <h2>O Rappa</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eligendi labore sapiente. Repellendus
                 consequuntur perspiciatis beatae ab dicta velit quasi non quis nulla, adipisci incidunt molestias ipsum
                 hic animi? Reiciendis.
