--- a/public/sobre.html
+++ b/public/sobre.html
@@ -10,7 +10,7 @@
 
     <script src="./js/sessao.js"></script>
 
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/sobre.css">
     <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
@@ -20,16 +20,16 @@
     <!--header inicio-->
     <div class="header">
         <nav class="navbar">
-            <a href="./index.html">Inicial</a>
-            <a href="simulador.html">Sobre</a>
-            <a href="simulador.html">Discografia</a>
             <img class="logoBandaNav" src="../public/assets/imgs/ORaioRappa.png" style="width: 95px;">
-            <a href="./quiz.html">Quiz</a>
-            <a href="./login.html">Login</a>
-            <a href="./cadastro.html">Cadastro</a>
+            <a href="./index.html">INICIAL</a>
+            <a href="#chamaSobre">SOBRE</a>
+            <a href="#Discografia">DISCOGRAFIA</a>
+            <a href="./quiz.html">QUIZ</a>
+            <a href="./login.html">LOGIN</a>
+            <a href="./cadastro.html">CADASTRO</a>
         </nav>
     </div>
-
+    <div class="espacamento"></div>
 
     <!-- simulador inicio -->
     <div class="simulador">
