--- a/public/login.html
+++ b/public/login.html
@@ -137,7 +137,7 @@
                     sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function () {
-                        window.location = "./quiz.html";
+                        window.location = "./formulario.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
